--- a/app/src/main/res/layout/activity_summary_reporting.xml
+++ b/app/src/main/res/layout/activity_summary_reporting.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
+<LinearLayout
     android:orientation="vertical"
-        android:id="@+id/mainLayout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".SummaryActivity">
+    android:id="@+id/mainLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SummaryActivity">
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="500dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -89,23 +89,18 @@
                     android:text="UOMs"
                     android:textSize="20dp" />
 
-                <GridView
-                    android:id="@+id/gridView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
-
-                </GridView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                <TextView
+                    android:layout_marginTop="30dp"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
                     android:layout_marginLeft="20dp"
-                    android:gravity="left"
-                    android:orientation="horizontal">
+                    android:id="@+id/uomsText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
 
                     <TextView
+                        android:layout_marginLeft="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
@@ -115,28 +110,35 @@
                         android:text="METHODS USED WELL"
                         android:textSize="20dp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginTop="30dp"
-                        android:gravity="right"
-                        android:text="NEEDS IMPROVEMENT"
-                        android:textSize="20dp" />
-                </LinearLayout>
-
-                <GridView
-                    android:id="@+id/gridView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <TextView
+                    android:textStyle="bold"
+                    android:textSize="20dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"></GridView>
+                    android:layout_marginTop="30dp"
+                    android:id="@+id/goodMethods"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:text="METHODS THAT NEED IMPROVEMENT"/>
+                <TextView
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="30dp"
+                    android:id="@+id/badMethods"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="COMMENTS/DELAY NOTES"
                     android:textSize="20dp" />
@@ -154,43 +156,6 @@
 
         </LinearLayout>
     </ScrollView>
-    <TextView
-        android:layout_marginTop="15dp"
-        android:text="This signature signifies that the information in this session was explained and all questions were answered"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:id="@+id/canvasLL"
-        android:layout_width="match_parent"
-        android:layout_height="200dp">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:layout_marginLeft="20dp"
-            android:id="@+id/clearBtn"
-            android:text="CLEAR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/submitSession"
-            android:text="SUBMIT SESSION"
-            android:textSize="30dp"
-            android:layout_marginLeft="150dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
 
 
-    </LinearLayout>
-
+</LinearLayout>
