--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,6 +57,13 @@
             android:text="Dashboard"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"/>
+        <TextView
+            android:textSize="20dp"
+            android:id="@+id/statusText"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </android.support.v7.widget.CardView>
 
